[project]
name = "lanpartydb-website"
version = "0.1.0"
description = "Website generator for the OrgaTalk LAN Party Database"
readme = "README.md"
authors = [
    { name = "Jochen Kupperschmidt", email = "homework@nwsnet.de" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-babel>=4.0.0",
    "flask-paginate>=2024.04.12",
    "frozen-flask>=1.0.2",
    "lanpartydb>=0.9.2",
    "pycountry>=24.6.1",
]
license = { text = "MIT" }
keywords = [ "lanparty" ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Repository = "https://github.com/lanpartydb/website"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
forced-separate = [ "tests" ]
lines-after-imports = 2
order-by-type = false

[tool.uv]
required-version = ">=0.6.12"
